--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,12 +8,11 @@ on:
       - feature/**
 
 env:
-  CHECKOUT_WORKSPACE: ./checkout-workspace
   NODE_BUILD_VERSION: 16
 
 jobs:
   call_workflow_setup:
-    name: Use Reusing workflows - setup
+    name: Reusable workflows/setup.yml@main
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       node_version: 16
@@ -21,9 +20,9 @@ jobs:
         ["ubuntu-latest", "windows-latest"]
   call_workflow_build:
     needs: [call_workflow_setup]
-    name: Use Reusing workflows - build
+    name: Reusable workflows/build.yml@main
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@main
   call_workflow_test:
     needs: [call_workflow_build]
-    name: Use Reusing workflows - test
+    name: Reusable workflows/test.yml@main
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@main
