--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: V_CI - Node.js - Build v1.
+name: Workflow - Build and Test
 
 on:
   push:
@@ -7,21 +7,17 @@ on:
       - develop
       - feature/**
 
-env:
-  NODE_BUILD_VERSION: 16
-
 jobs:
   call_workflow_setup:
-    name: Reusable workflows/setup.yml@main
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
 #    with:
+#      node-version: >-
+#        ["16", "14"]
 #      os: >-
 #        ["ubuntu-latest", "windows-latest"]
   call_workflow_build:
     needs: [call_workflow_setup]
-    name: Reusable workflows/build.yml@main
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@main
   call_workflow_test:
     needs: [call_workflow_build]
-    name: Reusable workflows/test.yml@main
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@main
