--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,10 +16,9 @@ jobs:
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
-      NODE_AUTH_TOKEN: ${{ env.NODE_AUTH_TOKEN }}
-      NODE_REGISTRY_URL: ${{ env.NODE_REGISTRY_URL }}
-      NODE_SCOPE: ${{ env.NODE_SCOPE }}
-
+      node-auth-token: $NODE_AUTH_TOKEN
+      node-registry-url: $NODE_REGISTRY_URL
+      node-scope: $NODE_SCOPE
   call_workflow_build:
     needs: [ call_workflow_setup ]
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@main
@@ -27,6 +26,6 @@ jobs:
     needs: [ call_workflow_build ]
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@main
     with:
-      NODE_AUTH_TOKEN: ${{ env.NODE_AUTH_TOKEN }}
-      NODE_REGISTRY_URL: ${{ env.NODE_REGISTRY_URL }}
-      NODE_SCOPE: ${{ env.NODE_SCOPE }}
+      node-auth-token: $NODE_AUTH_TOKEN
+      node-registry-url: $NODE_REGISTRY_URL
+      node-scope: $NODE_SCOPE
