--- a/.github/workflows/version-change.yaml
+++ b/.github/workflows/version-change.yaml
@@ -15,5 +15,5 @@ jobs:
     with:
       branch-ref: ${{ github.head_ref }}
   call_workflow_version_bump:
-    needs: [ call_workflow_build ]
+    needs: [ call_workflow_setup ]
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/version_bump.yml@main
