--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,3 +25,4 @@ jobs:
   call_workflow_publish:
     needs: [ call_workflow_build ]
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/publish.yml@main
+    secrets: inherit
