--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,6 +18,7 @@ jobs:
       node-auth-token: $NODE_AUTH_TOKEN
       node-registry-url: $NODE_REGISTRY_URL
       node-scope: $NODE_SCOPE
+    secrets: inherit
 
   call_workflow_build:
     needs: [ call_workflow_setup ]
