--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,7 +22,7 @@ jobs:
     with:
       branch-ref: ${{ github.event.pull_request.base.ref }}
       node-auth-token: 'TOTO'
-      node-registry-url: ${{ env.NODE_REGISTRY_URL }}
+      node-registry-url: $NODE_REGISTRY_URL
       node-scope: $NODE_SCOPE
     secrets: inherit
 
