--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,16 +6,14 @@ on:
       - production
 
 env:
-  NODE_AUTH_TOKEN: ${{ secrets.NPMRC_JFROG_ARTIFACTORY_TOKEN }}
-  NODE_REGISTRY_URL: ${{ secrets.NPMRC_JFROG_ARTIFACTORY_URL }}
-  NODE_SCOPE: ${{ secrets.NPMRC_JFROG_ARTIFACTORY_NAMESPACE }}
+  PRIVATE_REGISTRY: true
 
 jobs:
   call_workflow_setup:
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
-      private-registry: true
+      private-registry: $PRIVATE-REGISTRY
     secrets: inherit
   call_workflow_build:
     needs: [ call_workflow_setup ]
@@ -23,4 +21,6 @@ jobs:
   call_workflow_publish:
     needs: [ call_workflow_build ]
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/publish.yml@main
+    with:
+      private-registry: $PRIVATE_REGISTRY
     secrets: inherit
