--- a/.github/workflows/version-change.yaml
+++ b/.github/workflows/version-change.yaml
@@ -7,13 +7,13 @@ on:
     branches:
       - production
 
-
 jobs:
   call_workflow_setup:
     if: startsWith(github.head_ref, 'release')
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
+      npm-registry: private
     secrets: inherit
   call_workflow_version_bump:
     needs: [ call_workflow_setup ]
