Add private package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@absolunet/tester": "5.0.0-beta.5",
+		"@absolunet-sparks/credentials": "1.2.0",
 		"eslint": "7.32.0",
 		"eslint-plugin-unicorn": "36.0.0"
 	},
