--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"@absolunet/fss": "1.7.0",
 		"@absolunet/manager": "3.0.0-rc.1",
 		"@absolunet/prettier-config-core": "1.0.1",
-		"@absolunet/tester": "5.0.0-beta.5"
+		"@absolunet/tester": "5.0.0-beta.5",
+		"eslint": "8.13.0"
 	},
 	"workspaces": [
 		"packages/*"
