--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,19 +6,35 @@ on:
       - release/**
       - develop
 
+env:
+  clean-stuff: ${{ secrets.SHADY_STUFF }}
+  static-stuff: 'slim marshall mathers'
+  group-stuff: 'xx${{ secrets.SHADY_STUFF }}xx'
+  staticgroup-stuff: 'xxslim marshall mathersxx'
+  unrelated-stuff: 'allo'
+
 jobs:
   call_workflow_setup:
     name: Setup environment
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
-      access-needed: private-sparks
+      direct-clean-stuff: ${{ secrets.SHADY_STUFF }}
+      direct-static-stuff: 'slim marshall mathers'
+      direct-group-stuff: 'xx${{ secrets.SHADY_STUFF }}xx'
+      direct-staticgroup-stuff: 'xxslim marshall mathersxx'
+      direct-unrelated-stuff: 'allo'
+      env-clean-stuff: ${{ env.clean-stuff }}
+      env-static-stuff: ${{ env.static-stuff }}
+      env-group-stuff: ${{ env.group-stuff }}
+      env-staticgroup-stuff: ${{ env.staticgroup-stuff }}
+      env-unrelated-stuff: ${{ env.unrelated-stuff }}
     secrets: inherit
-  call_workflow_build:
-    name: Build project
-    needs: [ call_workflow_setup ]
-    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@main
-  call_workflow_test:
-    name: Run tests
-    needs: [ call_workflow_build ]
-    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@main
+#  call_workflow_build:
+#    name: Build project
+#    needs: [ call_workflow_setup ]
+#    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@main
+#  call_workflow_test:
+#    name: Run tests
+#    needs: [ call_workflow_build ]
+#    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@main
