--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
       # env-unrelated-stuff: ${{ env.unrelated-stuff }}     # Invalid according to parser
     secrets:
       yoyoyo: ${{ secrets.SHADY_STUFF }}
+      insult: 'ta mère'
 
 #  call_workflow_build:
 #    name: Build project
