--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,12 @@ jobs:
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
-      access-needed: private-sparks
-    secrets: inherit
+      jfrog-artifactory: true
+    secrets:
+      GLOBAL_ACCESS_TOKEN: ${{ secrets.GLOBAL_ACCESS_TOKEN }}
+      scope: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_SCOPE }}
+      registry-url: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_REGISTRY }}
+      auth-token: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_AUTH }}
   call_workflow_build:
     name: Build project
     needs: [ call_workflow_setup ]
