--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       jfrog-artifactory: true
     secrets:
 #      GLOBAL_ACCESS_TOKEN: ${{ secrets.GLOBAL_ACCESS_TOKEN }}
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+#      github-token: ${{ secrets.GITHUB_TOKEN }}
       scope: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_SCOPE }}
       registry-url: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_REGISTRY }}
       auth-token: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_AUTH }}
