--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
       branch-ref: ${{ github.head_ref }}
       jfrog-artifactory: true
     secrets:
-      github-token: ${{ secrets.GLOBAL_ACCESS_TOKEN }}
-#      scope: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_SCOPE }}
+#      github-token: ${{ secrets.GLOBAL_ACCESS_TOKEN }}
+      scope: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_SCOPE }}
       registry-url: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_REGISTRY }}
       auth-token: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_AUTH }}
   call_workflow_build:
