--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,7 @@ jobs:
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
-      jfrog-artifactory: true
+#      jfrog-artifactory: true
     secrets:
       github-token: ${{ secrets.GLOBAL_ACCESS_TOKEN }}
       scope: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_SCOPE }}
