--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
     with:
       branch-ref: ${{ github.head_ref }}
-      jfrog-artifactory: true
+#      jfrog-artifactory: true
     secrets:
       scope: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_SCOPE }}
       registry-url: ${{ secrets.JFROG_ARTIFACTORY_NPM_SPARKS_REGISTRY }}
