--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   call_workflow_setup:
     name: Setup environment
-    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@main
+    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/setup.yml@develop
     with:
       branch-ref: ${{ github.head_ref }}
       jfrog-artifactory: true
@@ -20,8 +20,8 @@ jobs:
   call_workflow_build:
     name: Build project
     needs: [ call_workflow_setup ]
-    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@main
+    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/build.yml@develop
   call_workflow_test:
     name: Run tests
     needs: [ call_workflow_build ]
-    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@main
+    uses: absolunet/github-node-manager-reusable-workflows/.github/workflows/test.yml@develop
